actualización jenkinsfile